# rag_private_document_chatbot

./: .coverage  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  grafana_dashboard.json  loki-config.yml  prometheus.yml  promtail-config.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
nginx/: nginx.conf
scripts/: ai_code_review.py
src/: app.py  celery_app.py  config.py  logging_config.py  original_main.py  rag.py  tasks.py
src/templates/: index.html
tests/: test_app.py  test_async.py  test_health.py  test_rag.py  test_security.py  test_smoke.py
