[project]
name = "rag-private-document-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "flask>=3.1.2",
    "gunicorn>=24.1.1",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-huggingface==0.0.3",
    "langchain-openai==0.1.23",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
]
